[package]
name = "seal-kit"
version = "0.1.0"
edition = "2024"
authors = ["GlorYouth <admin@gloryouth.com>"]
description = "一个提供统一的框架来处理传统加密（RSA）、后量子加密（Kyber）以及两者的混合模式的库"
license = "MPL-2.0"
readme = "README.md"
keywords = ["cryptography", "post-quantum", "rsa", "kyber"]
categories = ["cryptography"]

[features]
default = ["asymmetric", "symmetric", "secure-storage", "async-engine", "parallel"]

# 可选功能：启用DEK缓存以实现高性能加密。
# 警告：此功能会重用DEK，这违反了密码学最佳实践，并可能降低安全性。
# 仅在性能至关重要且了解安全风险的情况下使用。
# Optional feature: Enables DEK caching for high-performance encryption.
# WARNING: This feature reuses the DEK, which is against cryptographic best practices and may reduce security.
# Use only when performance is critical and the security implications are understood.
dek-caching = []

# 非对称加密
asymmetric = ["traditional", "post-quantum"]
traditional = ["rsa"]
post-quantum = ["pqcrypto-kyber", "pqcrypto-traits", "aes-gcm-feature"]

# 对称加密
symmetric = ["aes-gcm-feature", "chacha", "secure-storage"]
aes-gcm-feature = [ "rand_core"]
chacha = ["chacha20poly1305"]

# 其他功能
secure-storage = ["argon2", "secrecy", "aes-gcm-feature", "rand_core"]
async-engine = ["tokio", "tokio-util", "async-trait"]
parallel = ["rayon"]
async = ["notify", "tokio", "async-trait"]


[dependencies]
# 核心与序列化
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
base64 = "0.22.1"
arc-swap = "1"
config = { version = "0.15.11", features = ["json"] }
bincode = "2.0.1"
thiserror = "2.0.12"

# 非对称加密
rsa = { version = "0.9.8", optional = true }
pqcrypto-kyber = { version = "0.8.1", optional = true }
pqcrypto-traits = { version = "0.3.5", optional = true }

# 对称加密
aes-gcm = { version = "0.10.3", features = ["std"] }
chacha20poly1305 = { version = "0.10.1", optional = true }

# 密码学原语与安全
sha2 = "0.10.9"
rand_core = { version = "0.9.3", optional = true, features = ["os_rng", "std"] }
argon2 = { version = "0.5.3", features = ["std"], optional = true }
secrecy = { version = "0.10.3", optional = true, features = ["serde"] }
zeroize = { version = "1.8.1", features = ["derive"] }
hkdf = "0.12.4"

# 异步与并发
tokio = { version = "1", features = ["full"], optional = true }
async-trait = { version = "0.1", optional = true }
rayon = { version = "1.10.0", optional = true }

# 工具库
chrono = "0.4"
uuid = { version = "1.17.0", features = ["v4"] }
tempfile = "3.20.0"
notify = { version = "8.0.0", features = ["serde"], optional = true }

# New dependencies
num_cpus = "1.16.0"
tokio-util = { version = "0.7.15", features = ["compat", "io-util"], optional = true }

[dev-dependencies]
criterion = "0.6"
tempfile = "3.8.0"
rand = "0.9.1"

[[example]]
name = "comprehensive_usage"
path = "examples/comprehensive_usage.rs"
required-features = ["secure-storage", "async-engine"]

[[bench]]
name = "seal_kit_benches"
path = "benches/seal_kit_benches.rs"
harness = false
required-features = ["secure-storage", "async-engine", "parallel"]
