[package]
name = "seal-kit"
version = "0.1.0"
edition = "2024"
authors = ["GlorYouth <admin@gloryouth.com>"]
description = "一个基于 seal-flow 的、提供高级加密工作流的库"
license = "MPL-2.0"
readme = "README.md"
keywords = ["cryptography", "post-quantum", "seal-flow", "hybrid-encryption"]
categories = ["cryptography"]


[dependencies]

# 核心依赖
seal-flow = { path = "../seal-flow" }

# 序列化与编码
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
base64 = "0.22"

# 并发与安全原语
arc-swap = "1.7"
dashmap = "5.5"
sha2 = "0.10"
zeroize = { version = "1.7", features = ["derive"] }

# 工具库
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.8", features = ["v4"] }
tempfile = "3.10"
thiserror = "2.0.12"
bincode = { version = "2.0.1", features = ["serde"] }

[features]
default = ["async"]

secure-storage = []
async = []

[dev-dependencies]
criterion = "0.5"
tempfile = "3.10"
tokio = { version = "1", features = ["full"] }
