[package]
name = "seal-kit"
version = "0.1.0"
edition = "2024"
authors = ["GlorYouth <admin@gloryouth.com>"]
description = "一个基于 seal-flow 的、提供高级加密工作流的库"
license = "MPL-2.0"
readme = "README.md"
keywords = ["cryptography", "post-quantum", "seal-flow", "hybrid-encryption"]
categories = ["cryptography"]


[dependencies]

# 核心依赖
seal-flow = { path = "../seal-flow", features = ["serde"] }

# 序列化与编码
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"

# 并发与安全原语
dashmap = "6.1.0"

# 工具库
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.20.0"
thiserror = "2.0.12"
bincode = { version = "2.0.1", features = ["serde"] }
async-trait = "0.1.88"

[features]
default = ["async"]

secure-storage = []
async = []

[dev-dependencies]
criterion = "0.6.0"
tempfile = "3.10"
tokio = { version = "1.46.1", features = ["full"] }
